# OPTimal-summary

./: .gitignore  README.md  download.sh  preprocess_data.py  pyproject.toml  run.py
conf/: run.yaml
opts/: dataset.py  model.py  training.py  utils.py
results/opts_model/: adapter_config.json
results/opts_model_iter74304/: adapter_config.json
results/opts_model_iterepoch0/: adapter_config.json
results_webalorn/: log.txt  log_eval.txt
temp/: log.txt  log0_001.txt  log0_002.txt  log0_005.txt  log_final.txt
